# mcp-image-gen

./: README.md  pyproject.toml
src/image_gen/: server.py
