[project]
name = "image-gen"
version = "0.3.0"
description = "MCP server enabling Image Generation for LLMs, built in Python and integrated with Together AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
image-gen = "image_gen:main"
